<resources>
    <string name="app_name">Libros y Autores</string>
    <string name="libro">Libro</string>
    <string name="autor">Autor</string>
    <string name="details_btn">Detalles</string>
    <string name="create_btn">Guardar</string>
    <string name="create">Crear</string>
    <string name="list_btn">Listar</string>
    <string name="new_btn">Nuevo</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Eliminar</string>
    <string name="menu_share">Compartir</string>
    <string name="details_autor">Detalles Autor</string>
    <string name="create_autor">Creacion Autor</string>
    <string name="edit_autor">Editar Autor</string>
    <string name="details_book">Detalles Libro</string>
    <string name="create_book">Creacion Libro</string>
    <string name="edit_book">Editar Libro</string>
    <string name="book_listt">Lista Libros</string>
    <string name="name">Nombre:</string>
    <string name="last_name">Apellido:</string>
    <string name="fecha_nacimiento">Fecha Nacimiento:</string>
    <string name="numero_libros">Numero Libros:</string>
    <string name="ecuatoriano">Ecuatoriano:</string>
    <string name="isbn">ISBN:</string>
    <string name="numero_paginas">Numero Paginas:</string>
    <string name="edicion">Edicion:</string>
    <string name="fecha_publicacion">Fecha Publicacion:</string>
    <string name="editorial">Editorial:</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="maps">Mapa</string>
    <string name="confirmation">Seguro desea eliminar?</string>
    <string name="title_activity_maps">Mapa</string>

    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login_button">Iniciar Sesion</string>
    <string name="email_error">Ingrese un correo electronico valido</string>
    <string name="password_error">El campo contraseña no puede estar vacio</string>
    <string name="login_error">Error en inicio de sesion</string>
    <string name="picture">Tomar Foto</string>
    <string name="title_activity_customer">Libros y Autores - Comprador</string>
    <string name="title_activity_seller">Libros y Autores - Vendedor</string>
    <string name="title_home">Inicio</string>
    <string name="title_cart">Carrito</string>
    <string name="title_orders">Ordenes</string>
    <string name="price">Precio</string>
    <string name="add">Agregar</string>
</resources>
